--- a/index.HTML
+++ b/index.HTML
@@ -44,9 +44,9 @@
             </a>
         </div>
         <div class="terms">
-    <a href="#terms" class="footer-link outline-font">Terms</a>
+    <a href="#terms">Terms</a>
     <span class="separator outline-font">|</span>
-    <a href="mailto:info@example.com" class="footer-link outline-font">Contact Us</a>
+    <a href="mailto:info@example.com">Contact Us</a>
         </div>
     </div>
 </body>
