--- a/index.HTML
+++ b/index.HTML
@@ -44,9 +44,9 @@
             </a>
         </div>
         <div class="terms">
-    <a href="#terms">Terms</a>
-    <span class="separator outline-font">|</span>
-    <a href="mailto:info@example.com">Contact Us</a>
+<a href="#terms" style="color: white;">Terms</a>
+<span class="separator outline-font" style="color: white;">|</span>
+<a href="mailto:info@example.com" style="color: white;">Contact Us</a>
         </div>
     </div>
 </body>
