--- a/index.HTML
+++ b/index.HTML
@@ -26,7 +26,10 @@
                         <span class="line line-right"></span>
                     </div>
                 </div>
-                <video class="background-video" src="img/join.mp4" loop muted autoplay></video>
+           <video class="background-video" loop muted playsinline poster="img/poster.jpg">
+    <source src="img/join.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
             </div>
         </div>
     </div>
