--- a/index.HTML
+++ b/index.HTML
@@ -26,8 +26,9 @@
                         <span class="line line-right"></span>
                     </div>
                 </div>
-           <video class="background-video" loop muted playsinline poster="img/poster.jpg">
+<video class="background-video" loop muted playsinline poster="img/poster.jpg">
     <source src="img/join.mp4" type="video/mp4">
+    <source src="img/join.webm" type="video/webm">
     Your browser does not support the video tag.
 </video>
             </div>
