--- a/index.HTML
+++ b/index.HTML
@@ -22,7 +22,7 @@
                     </div>
                     <div class="normal-text-container">
                         <span class="line line-left"></span>
-                        <p class="normal-text">$8.95 For One Month</p>
+                        <p class="normal-text">€8.95 For One Month</p>
                         <span class="line line-right"></span>
                     </div>
                 </div>
