--- a/index.HTML
+++ b/index.HTML
@@ -17,15 +17,14 @@
                     <h1 class="biggest-text">UNFILTERED</h1>
                     <h2 class="medium-text">PARADISE</h2>
                     <div class="lines">
-                        <span class="line"></span>
-                        <span class="line"></span>
-                    </div>
+                     
+                    
                     <div class="normal-text-container">
                         <span class="line line-left"></span>
                         <p class="normal-text">€8.95 For One Month</p>
                         <span class="line line-right"></span>
                     </div>
-                </div>
+                </div></div>
 <video class="background-video" loop muted playsinline poster="img/poster.jpg">
     <source src="img/join.mp4" type="video/mp4">
     <source src="https://files.fm/u/2yux4hhucv" type="video/webm">
