--- a/index.HTML
+++ b/index.HTML
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="button-container">
-        <a href="http://patreon.com" class="button">Buy Now</a>
+        <a href="http://patreon.com/onlybeach" class="button">Buy Now</a>
     </div>
     <div class="footer-container">
      
