--- a/index.HTML
+++ b/index.HTML
@@ -49,7 +49,7 @@
         <div class="terms">
 <a href="#terms" style="color: white;">Terms</a>
 <span class="separator outline-font" style="color: white;">|</span>
-<a href="mailto:info@example.com" style="color: white;">Contact Us</a>
+<a href="mailto:onlybeach4@gmail.com" style="color: white;">Contact Us</a>
         </div>
     </div>
 
