--- a/index.HTML
+++ b/index.HTML
@@ -42,7 +42,7 @@
             <a href="https://twitter.com" target="_blank">
                 <img src="img/twitter.svg" alt="Twitter">
             </a>
-            <a href="https://youtube.com" target="_blank">
+            <a href="https://www.youtube.com/@only-beach" target="_blank">
                 <img src="img/youtube.svg" alt="YouTube">
             </a>
         </div>
