--- a/index.HTML
+++ b/index.HTML
@@ -21,7 +21,7 @@
                     
                     <div class="normal-text-container">
                         <span class="line line-left"></span>
-                        <p class="normal-text">€8.95 For One Month</p>
+                        <p class="normal-text">€8.95 + TAX/MONTH</p>
                         <span class="line line-right"></span>
                     </div>
                 </div></div>
