--- a/index.HTML
+++ b/index.HTML
@@ -48,7 +48,8 @@
         <div class="terms">
 <a href="#terms" style="color: white;">Terms</a>
 <span class="separator outline-font" style="color: white;">|</span>
-<a href="mailto:onlybeach4@gmail.com" style="color: white;">Contact Us</a>
+<a href="mailto:onlybeach4@gmail.com" style="color: white;">Contact Us</a> <a href='http://www.freevisitorcounters.com'>more information</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=a29d71780119b576cd0bd08a2875bbade489dd7c'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1122059/t/4"></script>
         </div>
     </div>
 
