--- a/index.HTML
+++ b/index.HTML
@@ -30,7 +30,7 @@
                     
                     <div class="normal-text-container">
                         <span class="line line-left"></span>
-                        <p class="normal-text">€8.95 + TAX/MONTH</p>
+                        <p class="normal-text">€8.95 + TAX/MO</p>
                         <span class="line line-right"></span>
                     </div>
                 </div></div>
