--- a/index.HTML
+++ b/index.HTML
@@ -13,6 +13,9 @@
         .medium-text {
             font-family: 'Poppins', sans-serif;
         }
+        .footer-container a {
+            font-family: 'Poppins', sans-serif;
+        }
     </style>
 </head>
 <body>
@@ -55,9 +58,9 @@
             </a>
         </div>
         <div class="terms">
-<a href="#terms" style="color: white;">Terms</a>
-<span class="separator outline-font" style="color: white;">|</span>
-<a href="mailto:onlybeach4@gmail.com" style="color: white;">Contact Us</a> 
+            <a href="#terms" style="color: white; font-family: 'Poppins', sans-serif;">Terms</a>
+            <span class="separator outline-font" style="color: white;">|</span>
+            <a href="mailto:onlybeach4@gmail.com" style="color: white; font-family: 'Poppins', sans-serif;">Contact Us</a> 
         </div>
     </div>
 
