--- a/index.HTML
+++ b/index.HTML
@@ -16,6 +16,23 @@
         .footer-container a {
             font-family: 'Poppins', sans-serif;
         }
+
+        /* Button styles */
+        .button {
+            display: inline-flex;
+            padding: 20px 80px;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+            box-shadow: rgba(0, 112, 254, 0.6) 0px 3px 80px;
+            background: rgb(3, 11, 24);
+            border: none;
+            outline: none;
+            cursor: pointer;
+            text-decoration: none; /* Added to remove underline */
+            color: white; /* Added to set text color */
+            font-family: 'Poppins', sans-serif; /* Added to set font */
+        }
     </style>
 </head>
 <body>
