--- a/index.HTML
+++ b/index.HTML
@@ -33,6 +33,13 @@
             color: white; /* Added to set text color */
             font-family: 'Poppins', sans-serif; /* Added to set font */
         }
+
+        /* Logo styles */
+        .logo img {
+            width: 500px; /* Adjust width as needed */
+            height: auto; /* Maintain aspect ratio */
+            z-index: 20; /* Set the z-index */
+        }
     </style>
 </head>
 <body>
