--- a/index.HTML
+++ b/index.HTML
@@ -42,6 +42,11 @@
         }
 
         /* Second logo styles for footer */
+        .footer-logo {
+            display: flex;
+            align-items: center;
+        }
+
         .footer-logo img {
             width: 213px; /* Adjust width as needed */
             height: 83px; /* Adjust height as needed */
