--- a/index.HTML
+++ b/index.HTML
@@ -43,8 +43,9 @@
 
         /* Second logo styles for footer */
         .footer-logo {
-            display: flex;
-            align-items: center;
+            display: inline-block; /* Ensures the container takes only necessary width */
+            float: left; /* Aligns to the left */
+            margin-right: 20px; /* Adjust as needed */
         }
 
         .footer-logo img {
