--- a/index.HTML
+++ b/index.HTML
@@ -42,16 +42,17 @@
         }
 
         /* Second logo styles for footer */
-        .footer-logo {
-            display: inline-block; /* Ensures the container takes only necessary width */
-            float: left; /* Aligns to the left */
-            margin-right: 20px; /* Adjust as needed */
-        }
-
         .footer-logo img {
             width: 213px; /* Adjust width as needed */
             height: 83px; /* Adjust height as needed */
             z-index: 20; /* Set the z-index */
+        }
+
+        /* Footer container styles */
+        .footer-container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
         }
 
         /* Additional CSS */
