--- a/index.HTML
+++ b/index.HTML
@@ -42,17 +42,14 @@
         }
 
         /* Second logo styles for footer */
+        .footer-logo {
+            float: left;
+        }
+
         .footer-logo img {
             width: 213px; /* Adjust width as needed */
             height: 83px; /* Adjust height as needed */
             z-index: 20; /* Set the z-index */
-        }
-
-        /* Footer container styles */
-        .footer-container {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
         }
 
         /* Additional CSS */
