--- a/index.HTML
+++ b/index.HTML
@@ -55,6 +55,11 @@
             justify-content: flex-start;
         }
 
+        /* Adjust footer logo alignment */
+        .footer-logo {
+            margin-right: auto; /* Pushes the logo to the left */
+        }
+
         /* Additional CSS */
         * {
             box-sizing: border-box;
