--- a/index.HTML
+++ b/index.HTML
@@ -37,7 +37,7 @@
         /* Logo styles */
         .logo img {
             width: 213px; /* Adjust width as needed */
-            height: auto; /* Maintain aspect ratio */
+            height: 83px; /* Adjust height as needed */
             z-index: 20; /* Set the z-index */
         }
 
@@ -58,6 +58,7 @@
         /* Adjust footer logo alignment */
         .footer-logo {
             margin-right: auto; /* Pushes the logo to the left */
+            margin-left: 20px; /* Adjust as needed */
         }
 
         /* Additional CSS */
