--- a/index.HTML
+++ b/index.HTML
@@ -34,14 +34,13 @@
             font-family: 'Poppins', sans-serif; /* Added to set font */
         }
 
-        /* Logo styles */
-        .logo img {
-            width: 213px; /* Adjust width as needed */
-            height: 83px; /* Adjust height as needed */
+        /* Main logo styles */
+        .main-logo img {
+            width: 500px; /* Adjust width as needed */
             z-index: 20; /* Set the z-index */
         }
 
-        /* Second logo styles for footer */
+        /* Footer logo styles */
         .footer-logo img {
             width: 213px; /* Adjust width as needed */
             height: 83px; /* Adjust height as needed */
@@ -53,12 +52,6 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-        }
-
-        /* Adjust footer logo alignment */
-        .footer-logo {
-            margin-right: auto; /* Pushes the logo to the left */
-            margin-left: 20px; /* Adjust as needed */
         }
 
         /* Additional CSS */
@@ -95,8 +88,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">
-            <img src="img/logo.svg" alt="Logo">
+        <div class="main-logo">
+            <img src="img/logo.svg" alt="Main Logo">
         </div>
         <div class="content">
             <div class="round-container">
@@ -122,7 +115,7 @@
         <a href="http://patreon.com/onlybeach" class="button">Buy Now</a>
     </div>
     <div class="footer-links">
-        <div class="logo-outside-footer">
+        <div class="footer-logo">
             <img src="img/logo.svg" alt="Footer Logo">
         </div>
         <a href="#terms" class="footer-text">Terms</a>
