--- a/index.HTML
+++ b/index.HTML
@@ -78,7 +78,7 @@
         }
 
         /* Align Terms and Contact Us to the right */
-        .footer-links {
+        .footer-container {
             display: flex;
             align-items: center;
             justify-content: flex-end;
@@ -114,7 +114,7 @@
     <div class="button-container">
         <a href="http://patreon.com/onlybeach" class="button">Buy Now</a>
     </div>
-    <div class="footer-links">
+    <div class="footer-container">
         <div class="footer-logo">
             <img src="img/logo.svg" alt="Footer Logo">
         </div>
