--- a/index.HTML
+++ b/index.HTML
@@ -36,7 +36,7 @@
 
         /* Main logo styles */
         .main-logo {
-            float: left; /* Align logo to the left */
+            float: center; /* Align logo to the left */
         }
 
         .main-logo img {
@@ -72,13 +72,6 @@
             text-decoration: none;
             cursor: pointer;
             margin-left: 20px; /* Adjust the margin as needed */
-        }
-
-        .footer-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px;
         }
 
         .social-icons {
