--- a/index.HTML
+++ b/index.HTML
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -92,10 +92,22 @@
             bottom: 20px;
             left: 260px; /* Adjust the left position */
             z-index: 20; /* Set the z-index */
+            display: flex;
+            align-items: center;
         }
 
         .social-icons a {
             margin-right: 20px; /* Adjust the margin as needed */
+        }
+
+        .copyright {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            color: rgb(255, 255, 255);
+            font-family: 'Poppins', sans-serif;
+            font-size: 18px;
+            z-index: 20; /* Set the z-index */
         }
     </style>
 </head>
@@ -144,6 +156,10 @@
         <a href="https://www.youtube.com/@only-beach" target="_blank">
             <img src="img/youtube.svg" alt="YouTube">
         </a>
+    </div>
+
+    <div class="copyright">
+        © 2024 Onlybeach. All Rights Reserved
     </div>
 
     <script>
