--- a/index.HTML
+++ b/index.HTML
@@ -159,7 +159,7 @@
     </div>
 
     <div class="copyright">
-        © 2024 Onlybeach. All Rights Reserved
+        © 2023 Barebeach. All Rights Reserved
     </div>
 
     <script>
