--- a/index.HTML
+++ b/index.HTML
@@ -89,7 +89,7 @@
 
         .social-icons {
             position: fixed;
-            bottom: 20px;
+            bottom: 100px;
             left: 260px; /* Adjust the left position */
             z-index: 20; /* Set the z-index */
             display: flex;
@@ -102,7 +102,7 @@
 
         .copyright {
             position: fixed;
-            bottom: 20px;
+            bottom: 80px;
             left: 260px; /* Adjust the left position */
             z-index: 20; /* Set the z-index */
             color: rgb(255, 255, 255);
@@ -111,13 +111,13 @@
         }
 
         /* Line across the screen */
-        .container::after {
-            content: "";
-            position: absolute;
+        .footer-line {
+            position: fixed;
+            bottom: 65px; /* Adjust the position as needed */
             left: 0;
-            right: 0;
-            top: calc(50% - 1px); /* Adjust line position vertically */
-            border-top: 2px solid rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
+            width: 100%;
+            height: 1px;
+            background-color: rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
             z-index: 10; /* Set the z-index */
         }
     </style>
@@ -172,6 +172,8 @@
     <div class="copyright">
         © 2023 Barebeach. All Rights Reserved
     </div>
+
+    <div class="footer-line"></div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
