--- a/index.HTML
+++ b/index.HTML
@@ -9,19 +9,22 @@
     <style>
         .biggest-text {
             font-family: 'Poppins', sans-serif;
+            font-size: 3.5rem; /* Adjust font size for mobile */
         }
+        
         .medium-text {
             font-family: 'Poppins', sans-serif;
+            font-size: 2rem; /* Adjust font size for mobile */
         }
 
         /* Button styles */
         .button {
             display: inline-flex;
-            padding: 20px 80px;
+            padding: 15px 50px; /* Adjust padding for mobile */
             justify-content: center;
             align-items: center;
             border-radius: 10px;
-            box-shadow: rgba(0, 112, 254, 0.6) 0px 3px 80px;
+            box-shadow: rgba(0, 112, 254, 0.6) 0px 3px 30px; /* Adjust box-shadow for mobile */
             background: rgb(3, 11, 24);
             border: none;
             outline: none;
@@ -29,30 +32,29 @@
             text-decoration: none; /* Added to remove underline */
             color: white; /* Added to set text color */
             font-family: 'Poppins', sans-serif; /* Added to set font */
+            font-size: 1.5rem; /* Adjust font size for mobile */
         }
 
         /* Main logo styles */
         .main-logo {
-            float: left; /* Align logo to the left */
-            margin-right: 20px; /* Add margin for spacing */
+            text-align: center; /* Center align for mobile */
+            margin-bottom: 20px; /* Add margin for spacing */
         }
 
         .main-logo img {
-            width: 500px; /* Adjust width as needed */
-            z-index: 20; /* Set the z-index */
+            max-width: 100%; /* Make logo responsive */
+            height: auto; /* Make logo responsive */
         }
 
         /* Footer logo styles */
         .footer-logo {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            z-index: 20; /* Set the z-index */
+            text-align: center; /* Center align for mobile */
+            margin-top: 20px; /* Add margin for spacing */
         }
 
         .footer-logo img {
-            width: 213px; /* Adjust width as needed */
-            height: 83px; /* Adjust height as needed */
+            max-width: 100%; /* Make logo responsive */
+            height: auto; /* Make logo responsive */
         }
 
         /* Additional CSS */
@@ -67,58 +69,44 @@
 
         /* Styles for Terms and Contact Us */
         .footer-text-container {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 20; /* Set the z-index */
-            display: flex;
-            align-items: center;
+            text-align: center; /* Center align for mobile */
+            margin-top: 20px; /* Add margin for spacing */
         }
 
         .footer-text {
             color: rgb(255, 255, 255);
             font-family: 'Poppins', sans-serif;
-            font-size: 22px;
+            font-size: 1.5rem;
             font-style: normal;
             font-weight: 500;
             line-height: 135%;
             text-decoration: none;
             cursor: pointer;
-            margin-left: 20px; /* Adjust the margin as needed */
-        }
-
-        .social-icons {
-            position: fixed;
-            bottom: 100px;
-            left: 260px; /* Adjust the left position */
-            z-index: 20; /* Set the z-index */
-            display: flex;
-            align-items: center;
-        }
-
-        .social-icons a {
-            margin-right: 20px; /* Adjust the margin as needed */
-        }
-
-        .copyright {
-            position: fixed;
-            bottom: 80px;
-            left: 260px; /* Adjust the left position */
-            z-index: 20; /* Set the z-index */
-            color: rgb(255, 255, 255);
-            font-family: 'Poppins', sans-serif;
-            font-size: 18px;
+            margin: 0 10px; /* Adjust the margin as needed */
         }
 
         /* Line across the screen */
         .footer-line {
-            position: fixed;
-            bottom: 65px; /* Adjust the position as needed */
-            left: 0;
+            margin-top: 20px; /* Add margin for spacing */
             width: 100%;
             height: 1px;
             background-color: rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
-            z-index: 10; /* Set the z-index */
+        }
+
+        @media only screen and (max-width: 768px) {
+            .button {
+                padding: 12px 40px; /* Adjust padding for smaller screens */
+                font-size: 1.2rem; /* Adjust font size for smaller screens */
+            }
+
+            .main-logo img {
+                width: 80%; /* Adjust logo width for smaller screens */
+            }
+
+            .background-video {
+                max-width: 100%; /* Make video responsive */
+                height: auto; /* Make video responsive */
+            }
         }
     </style>
 </head>
@@ -160,13 +148,7 @@
         <a href="#terms" class="footer-text">Terms</a>
     </div>
 
-
-
     <div class="footer-line"></div>
-
-
-
-
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
