--- a/index.HTML
+++ b/index.HTML
@@ -55,6 +55,7 @@
         .footer-logo img {
             max-width: 100%; /* Make logo responsive */
             height: auto; /* Make logo responsive */
+            width: 150px; /* Adjust width for desktop */
         }
 
         /* Additional CSS */
@@ -103,9 +104,8 @@
                 width: 80%; /* Adjust logo width for smaller screens */
             }
 
-            .background-video {
-                max-width: 100%; /* Make video responsive */
-                height: auto; /* Make video responsive */
+            .footer-logo img {
+                width: 100%; /* Adjust width for mobile */
             }
         }
     </style>
