--- a/index.HTML
+++ b/index.HTML
@@ -9,22 +9,19 @@
     <style>
         .biggest-text {
             font-family: 'Poppins', sans-serif;
-            font-size: 3.5rem; /* Adjust font size for mobile */
         }
-        
         .medium-text {
             font-family: 'Poppins', sans-serif;
-            font-size: 2rem; /* Adjust font size for mobile */
         }
 
         /* Button styles */
         .button {
             display: inline-flex;
-            padding: 15px 50px; /* Adjust padding for mobile */
+            padding: 20px 80px;
             justify-content: center;
             align-items: center;
             border-radius: 10px;
-            box-shadow: rgba(0, 112, 254, 0.6) 0px 3px 30px; /* Adjust box-shadow for mobile */
+            box-shadow: rgba(0, 112, 254, 0.6) 0px 3px 80px;
             background: rgb(3, 11, 24);
             border: none;
             outline: none;
@@ -32,30 +29,30 @@
             text-decoration: none; /* Added to remove underline */
             color: white; /* Added to set text color */
             font-family: 'Poppins', sans-serif; /* Added to set font */
-            font-size: 1.5rem; /* Adjust font size for mobile */
         }
 
         /* Main logo styles */
         .main-logo {
-            text-align: center; /* Center align for mobile */
-            margin-bottom: 20px; /* Add margin for spacing */
+            float: left; /* Align logo to the left */
+            margin-right: 20px; /* Add margin for spacing */
         }
 
         .main-logo img {
-            max-width: 100%; /* Make logo responsive */
-            height: auto; /* Make logo responsive */
+            width: 500px; /* Adjust width as needed */
+            z-index: 20; /* Set the z-index */
         }
 
         /* Footer logo styles */
         .footer-logo {
-            text-align: center; /* Center align for mobile */
-            margin-top: 20px; /* Add margin for spacing */
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            z-index: 20; /* Set the z-index */
         }
 
         .footer-logo img {
-            max-width: 100%; /* Make logo responsive */
-            height: auto; /* Make logo responsive */
-            width: 150px; /* Adjust width for desktop */
+            width: 213px; /* Adjust width as needed */
+            height: 83px; /* Adjust height as needed */
         }
 
         /* Additional CSS */
@@ -70,83 +67,58 @@
 
         /* Styles for Terms and Contact Us */
         .footer-text-container {
-            text-align: center; /* Center align for mobile */
-            margin-top: 20px; /* Add margin for spacing */
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 20; /* Set the z-index */
+            display: flex;
+            align-items: center;
         }
 
         .footer-text {
             color: rgb(255, 255, 255);
             font-family: 'Poppins', sans-serif;
-            font-size: 1.5rem;
+            font-size: 22px;
             font-style: normal;
             font-weight: 500;
             line-height: 135%;
             text-decoration: none;
             cursor: pointer;
-            margin: 0 10px; /* Adjust the margin as needed */
+            margin-left: 20px; /* Adjust the margin as needed */
+        }
+
+        .social-icons {
+            position: fixed;
+            bottom: 100px;
+            left: 260px; /* Adjust the left position */
+            z-index: 20; /* Set the z-index */
+            display: flex;
+            align-items: center;
+        }
+
+        .social-icons a {
+            margin-right: 20px; /* Adjust the margin as needed */
+        }
+
+        .copyright {
+            position: fixed;
+            bottom: 80px;
+            left: 260px; /* Adjust the left position */
+            z-index: 20; /* Set the z-index */
+            color: rgb(255, 255, 255);
+            font-family: 'Poppins', sans-serif;
+            font-size: 18px;
         }
 
         /* Line across the screen */
         .footer-line {
-            margin-top: 20px; /* Add margin for spacing */
+            position: fixed;
+            bottom: 65px; /* Adjust the position as needed */
+            left: 0;
             width: 100%;
             height: 1px;
             background-color: rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
-        }
-
-        /* Video container styles */
-        .round-container {
-            position: relative;
-            width: 80%; /* Set width for desktop */
-            max-width: 800px; /* Set maximum width for desktop */
-            margin: 0 auto; /* Center align for desktop */
-            overflow: hidden;
-        }
-
-        .background-video {
-            width: 100%; /* Make video container responsive */
-            height: auto; /* Make video container responsive */
-            max-height: 500px; /* Set maximum height for desktop */
-        }
-
-        .text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            color: white;
-            z-index: 1;
-            padding: 20px;
-            font-size: 1.5rem; /* Adjust font size for mobile */
-        }
-
-        @media only screen and (max-width: 768px) {
-            .button {
-                padding: 12px 40px; /* Adjust padding for smaller screens */
-                font-size: 1.2rem; /* Adjust font size for smaller screens */
-            }
-
-            .main-logo img {
-                width: 80%; /* Adjust logo width for smaller screens */
-            }
-
-            .footer-logo img {
-                width: 100%; /* Adjust width for mobile */
-            }
-
-            .round-container {
-                width: 100%; /* Set width for mobile */
-            }
-
-            .background-video {
-                max-height: none; /* Remove maximum height for mobile */
-            }
-
-            .text {
-                padding: 10px; /* Adjust padding for mobile */
-                font-size: 1.2rem; /* Adjust font size for mobile */
-            }
+            z-index: 10; /* Set the z-index */
         }
     </style>
 </head>
@@ -186,6 +158,19 @@
     <div class="footer-text-container">
         <a href="mailto:onlybeach4@gmail.com" class="footer-text">Contact Us</a>
         <a href="#terms" class="footer-text">Terms</a>
+    </div>
+
+    <div class="social-icons">
+        <a href="https://twitter.com" target="_blank">
+            <img src="img/twitter.svg" alt="Twitter">
+        </a>
+        <a href="https://www.youtube.com/@only-beach" target="_blank">
+            <img src="img/youtube.svg" alt="YouTube">
+        </a>
+    </div>
+
+    <div class="copyright">
+        © 2023 Barebeach. All Rights Reserved
     </div>
 
     <div class="footer-line"></div>
