--- a/index.HTML
+++ b/index.HTML
@@ -67,8 +67,7 @@
 
         /* Styles for Terms and Contact Us */
         .footer-text-container {
-            display: flex;
-            align-items: center;
+            display: inline-block; /* Display inline-block to control spacing */
         }
 
         .footer-text {
