--- a/index.HTML
+++ b/index.HTML
@@ -98,7 +98,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 1px;
+            height: 2px; /* Adjusted height for better visibility */
             background-color: rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
             z-index: 10; /* Set the z-index */
         }
