--- a/index.HTML
+++ b/index.HTML
@@ -159,8 +159,9 @@
     <div class="button-container">
         <a href="http://patreon.com/onlybeach" class="button">Buy Now</a>
     </div>
-  <div class="footer-line"></div>
+
     <div class="footer">
+        <div class="footer-line"></div> <!-- Moved footer line here -->
         <div class="footer-left">
             <div class="footer-logo">
                 <img src="img/logo.svg" alt="Footer Logo">
@@ -180,7 +181,6 @@
             </div>
         </div>
     </div>
-
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
