--- a/index.HTML
+++ b/index.HTML
@@ -100,7 +100,7 @@
             width: 100%;
             height: 2px; /* Adjusted height for better visibility */
             background-color: rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
-            z-index: 10; /* Set the z-index */
+            z-index: 30; /* Set the z-index higher than other elements */
         }
 
         /* Adjustments for footer alignment */
@@ -161,7 +161,7 @@
     </div>
 
     <div class="footer">
-        <div class="footer-line"></div> <!-- Moved footer line here -->
+        <div class="footer-line"></div>
         <div class="footer-left">
             <div class="footer-logo">
                 <img src="img/logo.svg" alt="Footer Logo">
