--- a/index.HTML
+++ b/index.HTML
@@ -95,7 +95,7 @@
         /* Line across the screen */
         .footer-line {
             position: fixed;
-            bottom: 0;
+            bottom: 55px;
             left: 0;
             width: 100%;
             height: 2px; /* Adjusted height for better visibility */
