--- a/index.HTML
+++ b/index.HTML
@@ -95,7 +95,7 @@
         /* Line across the screen */
         .footer-line {
             position: fixed;
-            bottom: 55px;
+            bottom: 0;
             left: 0;
             width: 100%;
             height: 2px; /* Adjusted height for better visibility */
@@ -109,7 +109,7 @@
             justify-content: space-between;
             align-items: center;
             position: fixed;
-            bottom: 20px;
+            bottom: 0; /* Ensure it stays at the bottom */
             left: 0;
             right: 0;
             z-index: 20;
