--- a/index.HTML
+++ b/index.HTML
@@ -47,7 +47,7 @@
             position: fixed;
             bottom: 20px;
             left: 20px;
-            z-index: 20; /* Set the z-index */
+            z-index: 40; /* Set the z-index higher than the footer line */
         }
 
         .footer-logo img {
