--- a/index.HTML
+++ b/index.HTML
@@ -160,8 +160,9 @@
         <a href="http://patreon.com/onlybeach" class="button">Buy Now</a>
     </div>
 
+    <div class="footer-line"></div> <!-- Move this line above the footer -->
+
     <div class="footer">
-        <div class="footer-line"></div>
         <div class="footer-left">
             <div class="footer-logo">
                 <img src="img/logo.svg" alt="Footer Logo">
