--- a/index.HTML
+++ b/index.HTML
@@ -104,16 +104,13 @@
         }
 
         /* Adjustments for footer alignment */
-        .footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: fixed;
-            bottom: 0; /* Ensure it stays at the bottom */
-            left: 0;
-            right: 0;
-            z-index: 20;
-        }
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 100;
+}
 
         .footer-left {
             flex: 1;
