--- a/index.HTML
+++ b/index.HTML
@@ -109,7 +109,13 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    z-index: 100;
+    background-color: rgb(3, 11, 24); /* Set background color to match the design */
+    color: white; /* Set text color to white */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px; /* Add padding for better spacing */
+    z-index: 1000; /* Set a high z-index to ensure it stays on top of other elements */
 }
 
         .footer-left {
