--- a/index.HTML
+++ b/index.HTML
@@ -163,7 +163,7 @@
         <a href="http://patreon.com/onlybeach" class="button">Buy Now</a>
     </div>
 
-    <div class="footer-line"></div> <!-- Move this line above the footer -->
+  <div class="footer-line"></div>
 
     <div class="footer">
         <div class="footer-left">
