--- a/index.HTML
+++ b/index.HTML
@@ -34,6 +34,7 @@
         /* Main logo styles */
         .main-logo {
             float: left; /* Align logo to the left */
+            margin-top: 90px;
             margin-right: 20px; /* Add margin for spacing */
         }
 
