--- a/index.HTML
+++ b/index.HTML
@@ -117,6 +117,8 @@
     align-items: center;
     padding: 10px 20px; /* Add padding for better spacing */
     z-index: 1000; /* Set a high z-index to ensure it stays on top of other elements */
+border-top: 2px solid rgba(0, 112, 254, 0.6); /* Add blue border line at the top */
+
 }
 
         .footer-left {
