--- a/index.HTML
+++ b/index.HTML
@@ -152,6 +152,7 @@ border-top: 2px solid rgba(0, 112, 254, 0.6); /* Add blue border line at the top
                             <span class="line line-left"></span>
                             <p class="normal-text">€8.95 + TAX/MO</p>
                             <span class="line line-right"></span>
+<img src="img/4k.hdr" alt="Main Logo">
                         </div>
                     </div>
                 </div>
