--- a/index.HTML
+++ b/index.HTML
@@ -140,6 +140,10 @@
             margin-top: 10px; /* Adjust margin-top as needed */
         }
 
+        .image-container img {
+            width: 200px; /* Set width of the image */
+        }
+
     </style>
 </head>
 <body>
