--- a/index.HTML
+++ b/index.HTML
@@ -38,6 +38,248 @@
             margin-right: 20px; /* Add margin for spacing */
         }
 
+
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #000e24;
+    margin: 0;
+}
+
+/* Header */
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    position: relative;
+}
+
+.logo img {
+    max-width: 100%;
+    height: auto;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    max-width: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    padding: 10px;
+}
+
+.container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 0px;
+    background: #002d6a;
+    box-shadow: 0 0 190px #002d6a;
+    z-index: -1;
+}
+
+.content {
+    background-color: #020d1e;
+    border-radius: 10px;
+    padding: 20px;
+    position: relative;
+    width: 100%;
+    height: 70%;
+    margin: auto;
+    border-bottom: 1px solid #00357b;
+}
+
+.round-container {
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    margin: auto;
+    box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
+}
+
+.background-video {
+    width: 100%;
+    height: 80vh;
+    object-fit: cover;
+    opacity: 0.3;
+}
+
+.text {
+    color: rgb(202, 225, 255);
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 6vw;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%;
+    letter-spacing: 0.8vw;
+    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
+.biggest-text {
+    font-size: 4.5vw;
+}
+
+.medium-text {
+    font-size: 2.5vw;
+}
+
+.lines {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2vw 0;
+}
+
+.line {
+    height: 1px;
+    background-color: white;
+    width: 45%;
+}
+
+.normal-text-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 2vw;
+    font-size: 1.5vw;
+}
+
+.line-left,
+.line-right {
+    flex: 1;
+    height: 1px;
+    background-color: white;
+}
+
+.line-left {
+    margin-right: 2vw;
+}
+
+.line-right {
+    margin-left: 2vw;
+}
+
+.normal-text {
+    font-size: 1.5vw;
+}
+
+.price-icon {
+    margin-left: 2vw;
+}
+
+.button-container {
+    width: 40%;
+    margin: auto;
+    text-align: center;
+    margin-top: 5vw;
+    margin-bottom: 10vh;
+    z-index: 2;
+    position: relative;
+}
+
+.button {
+    display: inline-block;
+    background-color: #03142c;
+    border: none;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.5vw;
+    text-align: center;
+    padding: 1vw 4vw;
+    text-decoration: none;
+    border-radius: 10px;
+    transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.button:hover {
+    background-color: #000e24;
+    box-shadow: 0 0 4vw #00306f;
+}
+
+/* Footer */
+.footer-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #03142c;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    padding: 20px;
+}
+
+.footer-logo {
+    width: 50px;
+    height: 50px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+}
+
+.footer-content p {
+    margin: 0 10px;
+}
+
+.footer-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.footer-social a {
+    margin: 0 10px;
+    color: #fff;
+    font-size: 20px;
+}
+
+.footer-social a:hover {
+    color: #00ff00;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    color: #fff;
+}
+
+.footer-links a {
+    color: #fff;
+}
+
+.footer-links a:hover {
+    color: #fff;
+}
+
+
         .main-logo img {
             width: 500px; /* Adjust width as needed */
             z-index: 20; /* Set the z-index */
