--- a/index.HTML
+++ b/index.HTML
@@ -26,16 +26,17 @@
             border: none;
             outline: none;
             cursor: pointer;
-            text-decoration: none; /* Added to remove underline */
-            color: white; /* Added to set text color */
-            font-family: 'Poppins', sans-serif; /* Added to set font */
+            text-decoration: none;
+            color: white;
+            font-family: 'Poppins', sans-serif;
         }
 
         /* Main logo styles */
         .main-logo {
-            float: left; /* Align logo to the left */
-            margin-top: 90px;
-            margin-right: 20px; /* Add margin for spacing */
+            float: left;
+            margin-top: 20px;
+            margin-right: 10px;
+            max-width: 120px;
         }
 
         body {
@@ -209,81 +210,58 @@
 
         /* Footer */
         .footer {
+            flex-wrap: wrap;
+            padding: 10px;
             position: fixed;
             left: 0;
             bottom: 0;
             width: 100%;
-            background-color: rgb(3, 11, 24); /* Set background color to match the design */
-            color: white; /* Set text color to white */
+            background-color: rgb(3, 11, 24);
+            color: white;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 10px 20px; /* Add padding for better spacing */
-            z-index: 1000; /* Set a high z-index to ensure it stays on top of other elements */
-            border-top: 2px solid rgba(0, 112, 254, 0.6); /* Add blue border line at the top */
+            padding: 10px;
+            z-index: 1000;
+            border-top: 2px solid rgba(0, 112, 254, 0.6);
         }
 
         .footer-left {
-            flex: 1;
-        }
-
-        .footer-center {
-            flex: 1;
+            flex: 1 1 100%;
             text-align: center;
         }
 
+        .footer-center {
+            flex: 1 1 100%;
+            text-align: center;
+            margin-top: 10px;
+        }
+
         .footer-right {
-            flex: 1;
-            text-align: right;
-        }
-
-        .image-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 10px; /* Adjust margin-top as needed */
-        }
-
-        .image-container img {
-            width: 200px; /* Set width of the image */
+            flex: 1 1 100%;
+            text-align: center;
+            margin-top: 10px;
         }
 
         .footer-logo {
             position: fixed;
             bottom: 20px;
             left: 20px;
-            z-index: 40; /* Set the z-index higher than the footer line */
+            z-index: 40;
         }
 
         .footer-logo img {
-            width: 213px; /* Adjust width as needed */
-            height: 83px; /* Adjust height as needed */
+            width: 150px;
+            height: auto;
         }
 
-        /* Styles for Terms and Contact Us */
         .footer-text-container {
-            display: inline-block; /* Display inline-block to control spacing */
+            margin-top: 10px;
+            text-align: center;
         }
 
         .footer-text {
-            color: rgb(255, 255, 255);
-            font-family: 'Poppins', sans-serif;
-            font-size: 22px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 135%;
-            text-decoration: none;
-            cursor: pointer;
-            margin-left: 20px; /* Adjust the margin as needed */
-        }
-
-        .social-icons {
-            display: none; /* Hide social icons */
-        }
-
-        .copyright {
-            color: rgb(255, 255, 255);
-            font-family: 'Poppins', sans-serif;
-            font-size: 18px;
+            margin: 5px;
         }
 
         /* Line across the screen */
@@ -292,11 +270,10 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 2px; /* Adjusted height for better visibility */
-            background-color: rgba(0, 112, 254, 0.6); /* Same color as the border of the video container */
-            z-index: 30; /* Set the z-index higher than other elements */
+            height: 2px;
+            background-color: rgba(0, 112, 254, 0.6);
+            z-index: 30;
         }
-
     </style>
 </head>
 <body>
