--- a/index.HTML
+++ b/index.HTML
@@ -39,6 +39,12 @@
             max-width: 120px;
         }
 
+        @media (min-width: 768px) {
+            .main-logo {
+                width: 500px;
+            }
+        }
+
         body {
             background-color: #000e24;
             margin: 0;
@@ -262,6 +268,27 @@
 
         .footer-text {
             margin: 5px;
+            color: rgb(255, 255, 255);
+            text-align: right;
+            font-family: Rubik;
+            font-size: 19px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            z-index: 20;
+            opacity: 0.7;
+        }
+
+        .footer-text a {
+            color: rgb(255, 255, 255);
+            text-align: center;
+            font-family: Poppins;
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 135%;
+            text-decoration: none;
+            cursor: pointer;
         }
 
         /* Line across the screen */
