--- a/index.HTML
+++ b/index.HTML
@@ -322,7 +322,7 @@
                     </div>
                 </div>
                 <video class="background-video" loop muted playsinline poster="img/poster.jpg">
-                    <source src="img/join.mp4" type="video/mp4">
+                    <source src="img/" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
