--- a/index.HTML
+++ b/index.HTML
@@ -67,7 +67,7 @@
             flex-direction: column;
             align-items: center;
             min-height: 70vh;
-            max-width: 90%;
+            max-width: 80%;
             margin: 0 auto;
             overflow: hidden;
             position: relative;
@@ -106,12 +106,14 @@
             box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
         }
 
-        .background-video {
-            width: 100%;
-            height: 80vh;
-            object-fit: cover;
-            opacity: 0.3;
-        }
+    .background-video {
+    width: 100%;
+    height: auto; /* Adjusted to maintain aspect ratio */
+    max-height: 80vh; /* Adjusted maximum height */
+    display: block; /* Ensures the video scales properly */
+    margin: 0 auto; /* Centers the video horizontally */
+    opacity: 0.3;
+}
 
         .text {
             color: rgb(202, 225, 255);
