--- a/index.HTML
+++ b/index.HTML
@@ -97,14 +97,15 @@
             margin: auto;
             border-bottom: 1px solid #00357b;
         }
-
-        .round-container {
-            border-radius: 10px;
-            overflow: hidden;
-            position: relative;
-            margin: auto;
-            box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
-        }
+.round-container {
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    margin: auto;
+    box-shadow: 0 0 30px #002d6a, 0 0 20px #002d6a inset;
+    max-width: 100%; /* Ensure the container adjusts to the viewport */
+    height: auto; /* Allow the container to adjust its height based on content */
+}
 
     .background-video {
     width: 100%;
