--- a/index.HTML
+++ b/index.HTML
@@ -62,18 +62,18 @@
             height: auto;
         }
 
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 70vh;
-            max-width: 80%;
-            margin: 0 auto;
-            overflow: hidden;
-            position: relative;
-            padding: 10px;
-        }
-
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 70vh;
+    max-width: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    padding: 10px;
+    padding-right: 20px; /* Add right padding to prevent cutting off */
+}
         .container::before {
             content: "";
             position: absolute;
